style.css
/* Resets */

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    text-decoration: none;
}

h1,h2,h3,h4,h5,h6 {
    font-weight: normal;
    font-style: normal;
    font-size: 1rem;
  }

  ul,
  li {
    list-style: none;
  }
  
  img {
    max-width: 100%;
    display: block;
  }

  /*----------Globals---------- */
 :root {
--text-color-main: white; 
--padding-horizontal:2rem 
  }

  body {
    background-image:url(images/bg_purple.png);
    font-family: 'Caveat',  cursive;
    font-size: 1.1rem;
  }
  /*---------- Layout ---------- */
.page-title {
    justify-content: space-between;
    margin-bottom: 1rem;
    padding-bottom: 1rem;
}
.page-title-text {
    padding-bottom: 1rem;
}

.navbar {
    display: flex;
    justify-content: space-around;
    padding-left: var(--padding-horizontal);
    padding-right: var(--padding-horizontal);
}
.site-container {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    gap:2rem;
    padding-left: var(--padding-horizontal);
    padding-right: var(--padding-horizontal);
    padding-bottom: 1rem;
}



.main-text {
margin-left: auto;
margin-right: auto;

}

.section-container {

    display: flex;
    justify-content: space-around;
   
}

.sidebar {

display: flex;
justify-content: space-around;

}

.sidebar-content {
  width: 40%;
}


.global-wrapper { 
  max-width: 62.5rem;
}
/*---overrides for mediums sized screens (48rem-62.5rem) changes layout to use a grid, placing sidebar on the side--- */
@media (min-width:48rem) {

 .page-title{
    margin-bottom: 2rem;
  }
   .site-container {
    display: grid;
 grid-template-columns: 3fr 1fr;

   }

.main-text {
   
    grid-row-start: 1;
}
 .section-container {
    grid-column-start: 1;
   
 }  
 

.sidebar {
grid-column-start: 2;
grid-row-start: 1;
grid-row-end: 3;
flex-direction: column-reverse; 
justify-content: flex-end;

}

}
/*---overrides for larger screens (62.5rem+) centers the page once screen is above size  */
@media (min-width:62.5rem) {

  .global-wrapper {
    margin-left: auto;
    margin-right: auto;
  }

}

  /*----------Components----------*/
  
  .page-title-text {
    font-size: 1.6rem;
    text-align: center;
    color: var(--text-color-main);
  }

  .navbar-link {
color: var(--text-color-main);
padding: 0.5rem;
margin:0.5rem;
background-color: salmon;
border: 1px solid;
border-radius: 0.5rem;
  }

 .main-text {
    color: var(--text-color-main);
 } 
.section-content-left {
    width: 40%;
    color: var(--text-color-main);
}

.sidebar {
    color: var(--text-color-main);
}
.sidebar-img {
    aspect-ratio: 5/7;
    height: auto;
    display: block;
}

